--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@react-keycloak/web": "^3.4.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "keycloak-js": "^20.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "5.3.0",
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
