--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "keycloak-js": "^20.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
